# bot

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  REPLIT_SETUP.md  phase0_discovery.md  phase1_backend_infrastructure.md  phase2_telegram_bot_features.md  phase3_llm_integration.md  phase4_human_handoff.md  phase5_quality_testing_security.md  phase6_deployment_monitoring.md  pyproject.toml  requirements.txt  tasklist.md
scripts/: set_webhook.py
src/: __init__.py  main.py
src/api/: health.py  webhooks.py
src/core/: config.py  logging.py
src/db/: base.py  models.py
src/services/: conversation_manager.py  telegram_client.py  telegram_handler.py
